# backend-daluisgarcia.github.io

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
api/: serializers.py  views.py
app/: settings.py  urls.py
projects/: admin.py  models.py  views.py
projects/migrations/: 0001_initial.py
projects/templates/projects/: index.html
