[tool.poetry]
name = "backend-daluisgarcia-github-io"
version = "0.1.0"
description = ""
authors = ["daluisgarcia <daluisgarcia@gmail.com>"]
readme = "README.md"
packages = [{include = "backend_daluisgarcia"}]

[tool.poetry.dependencies]
python = "^3.12.6"
django = "5.1.1"
django-cors-headers = "4.4.0"
django-environ = "0.11.2"
djangorestframework = "3.15.2"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
